add feishu auth
