# services/user.go
@@ -5,6 +5,7 @@ import (
 	db "domain0/database"
 	m "domain0/models"
 	wm "domain0/models/web"
+	"domain0/utils"
 	"math/rand"
 	"regexp"
 	"time"
@@ -167,6 +168,95 @@ func Register(c *fiber.Ctx) error {
 	}
 
 	// set localstorage, not cookie
+	return c.Status(fiber.StatusOK).JSON(wm.User{
+		Status: fiber.StatusOK,
+		Data:   token,
+	})
+}
+
+// @Summary feishu auth redirect
+// @description feishu auth redirect api
+// @Produce json
+// @Success 302
+// @Failure 400 {object} wm.User{data=int}
+// @Router /api/v1/user/feishu [get]
+func FeishuAuthRedirect(c *fiber.Ctx) error {
+	return c.Redirect(utils.FeishuRedirectToCodeURL())
+}
+
+// @Summary oauth callback
+// @description oauth callback api
+// @description user can login with feishu for now
+// @Param code query string true "oauth code"
+// @Param state query string true "oauth state"
+// @Produce json
+// @Success 200 {object} wm.User{data=string}
+// @Failure 400 {object} wm.User{data=int}
+// @Failure 500 {object} wm.User{data=int}
+// @Router /api/v1/user/callback [get]
+func Callback(c *fiber.Ctx) error {
+	state := c.Query("state")
+	code := c.Query("code")
+	if code == "" || state == "" {
+		logrus.Errorf("code is empty")
+		return c.Status(fiber.StatusBadRequest).JSON(wm.User{
+			Status: fiber.StatusBadRequest,
+			Errors: "code is empty",
+			Data:   0,
+		})
+	}
+
+	// get userInfo
+	var userInfo utils.AuthInfo
+	if state == "feishu" {
+		var err error
+		userInfo, err = utils.FeishuGetUserInfo(code)
+		if err != nil {
+			logrus.Errorf("feishu get user info error : %v", err)
+			return c.Status(fiber.StatusInternalServerError).JSON(wm.User{
+				Status: fiber.StatusInternalServerError,
+				Errors: "internal server error",
+				Data:   0,
+			})
+		}
+	} else {
+		logrus.Errorf("state is not valid")
+		return c.Status(fiber.StatusBadRequest).JSON(wm.User{
+			Status: fiber.StatusBadRequest,
+			Errors: "state is not valid",
+			Data:   0,
+		})
+	}
+
+	// check if user exist
+	var userObject m.User
+	if err := db.DB.Where("email = ?", userInfo.Email).First(&userObject).Error; err != nil {
+		// not exist, create user
+		userObject = m.User{
+			Email:    userInfo.Email,
+			Password: "",
+		}
+		if err := db.DB.Create(&userObject).Error; err != nil {
+			logrus.Errorf("create user error : %v", err)
+			return c.Status(fiber.StatusInternalServerError).JSON(wm.User{
+				Status: fiber.StatusInternalServerError,
+				Errors: "internal server error",
+				Data:   0,
+			})
+		}
+	}
+
+	// generate jwt token
+	token, err := jwtSign(userObject)
+	if err != nil {
+		logrus.Errorf("generate jwt token error : %v", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(wm.User{
+			Status: fiber.StatusInternalServerError,
+			Errors: "internal server error",
+			Data:   0,
+		})
+	}
+
 	return c.Status(fiber.StatusOK).JSON(wm.User{
 		Status: fiber.StatusOK,
 		Data:   token,
